<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of BBCT for Android.

 Copyright 2012 codeguru <codeguru@users.sourceforge.net>

 BBCT for Android is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 BBCT for Android is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">BBCT for Android</string>
    
    <!-- Activity titles -->
    <string name="bbct_title">BBCT for Android - %1$s</string>
    <string name="card_details_title">Card Details</string>
    <string name="player_details_title">Player Details</string>
    <string name="filter_options_title">Filter Options</string>
    <string name="year_filter_title">Filter By Year</string>
    <string name="number_filter_title">Filter By Number</string>
    <string name="year_and_number_filter_title">Filter By Year and Number</string>
    <string name="player_name_filter_title">Filter By Player Name</string>
    <string name="about_title">About</string>
    <string name="input_error_title">Input Error</string>
    
    <string name="start">To get started press the menu button.</string>
    
    <!-- Labels for card details -->
    <string name="brand_label">Card Brand:</string>
    <string name="year_label">Card Year:</string>
    <string name="number_label">Card Number:</string>
    <string name="value_label">Card Value:</string>
    <string name="count_label">Card Count:</string>
    <string name="player_name_label">Player Name:</string>
    <string name="player_position_label">Player Position:</string>
    <string name="filter_by_label">Filter By...</string>
    
    <!-- Column headings for card list -->
    <string name="brand_col">Brand</string>
    <string name="year_col">Year</string>
    <string name="number_col">Number</string>
    <string name="value_col">Value</string>
    <string name="count_col">Count</string>
    <string name="player_name_col">Player Name</string>
    <string name="player_position_col">Player Position</string>
    
    <!-- Button text -->
    <string name="save_button">Save</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="done_button">Done</string>
    
    <!-- Hints for TextEdit widgets -->
    <string name="brand_hint">Enter card brand name.</string>
    <string name="year_hint">Enter card year.</string>
    <string name="number_hint">Enter card number.</string>
    <string name="value_hint">Enter card value.</string>
    <string name="count_hint">Enter card count.</string>
    <string name="player_name_hint">Enter player name.</string>
    <string name="player_position_hint">Enter player position.</string>
    
    <!-- Radio button labels -->
    <string name="year_radio_button">Year</string>
    <string name="number_radio_button">Number</string>
    <string name="year_and_number_radio_button">Year and Number</string>
    <string name="player_name_radio_button">Player Name</string>
    
    <!-- Menu text -->
    <string name="add_menu">Add Cards</string>
    <string name="filter_menu">Filter Cards</string>
    <string name="about_menu">About</string>
    <string name="clear_filter_menu">Clear Filter</string>
    
    <!-- Text in About activity -->
    <string name="version">Version 0.5 (beta)</string>
    <string name="copyright">Copyright 2012 by codeguru</string>
    <string name="email">Email: &lt;codeguru@users.sf.net&gt;</string>
    <string name="website">Website: http://sf.net/p/bbct</string>
    <string name="license">This software is licensed under the GPL. Visit\nhttp://www.gnu.org/licenses/ for a copy of the license.</string>
    <string name="about">
        BBCT is a simple database app for your baseball card collection.
        You can add information about the cards in your collection, view
        details about individual cards, and filter the list of cards according
        to a limited set of criteria. BBCT helps you organize your collection
        and quickly look up which cards you own. Feel free to email your 
        feedback and comments or visit the project website.
    </string>
    
    <!-- Card details toasts -->
    <string name="card_added_message">Card added successfully.</string>
    <string name="no_cards_message">No cards found.</string>
    
    <!-- Strings for position spinner in card details activity -->
    <string-array name="positions">
        <item>Pitcher</item>
        <item>Catcher</item>
        <item>First Base</item>
        <item>Second Base</item>
        <item>Third Base</item>
        <item>Shortstop</item>
        <item>Left Field</item>
        <item>Center Field</item>
        <item>Right Field</item>
    </string-array>

    <!-- Error messages-->
    <string name="no_radio_button_error">Please select an option.</string>
    <string name="brand_input_error">Please enter a brand name.</string>
    <string name="year_input_error">Please enter a year.</string>
    <string name="number_input_error">Please enter a card number.</string>
    <string name="value_input_error">Please enter the card\'s value.</string>
    <string name="count_input_error">Please enter the number of cards you own.</string>
    <string name="player_name_input_error">Please enter the player\'s name.</string>
    <string name="player_position_input_error">Please enter the player\'s position.</string>
    
    <!-- Dimensions used in card list rows -->
    <dimen name="brand_col_width">40dp</dimen>
    <dimen name="year_col_width">25dp</dimen>
    <dimen name="number_col_width">40dp</dimen>
    <dimen name="player_name_col_width">60dp</dimen>
    
    <!-- IDs for views -->
    <item type="id" name="brand_text"/>
    <item type="id" name="year_text"/>
    <item type="id" name="number_text"/>
    <item type="id" name="value_text"/>
    <item type="id" name="count_text"/>
    <item type="id" name="player_name_text"/>
    <item type="id" name="player_position_text"/>
    <item type="id" name="save_button"/>
    <item type="id" name="done_button"/>
    <item type="id" name="ok_button"/>
    <item type="id" name="cancel_button"/>
    
    <!-- IDs for request and result codes -->
    <item type="id" name="filter_options_request"/>
    <item type="id" name="year_filter_request"/>
    <item type="id" name="number_filter_request"/>
    <item type="id" name="year_and_number_filter_request"/>
    <item type="id" name="player_name_filter_request"/>
    <item type="id" name="no_filter"/>
    
    <!-- Keys for extras stored in Bundle and Intent objects -->
    <string name="baseball_card_extra">baseball_card</string>
    <string name="filter_request_extra">filter_request</string>
    <string name="year_extra">year</string>
    <string name="number_extra">number</string>
    <string name="player_name_extra">player_name</string>
    <string name="is_filtered_extra">is_filtered</string>
    <string name="filter_params_extra">filter_params</string>
</resources>
