<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of BBCT for Android.

 Copyright 2012 codeguru <codeguru@users.sourceforge.net>

 BBCT for Android is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 BBCT for Android is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:stretchColumns="1"
>
    <TableRow>
        <TextView android:text="@string/brand_label" />
        <EditText android:id="@+id/details_brand_text"
                  android:singleLine="true"
                  android:capitalize="words"
                  android:hint="@string/brand_hint"
        />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/year_label" />
        <EditText android:id="@+id/details_year_text"
                  android:singleLine="true"
                  android:numeric="integer"
                  android:hint="@string/year_hint"
        />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/number_label" />
        <EditText android:id="@+id/details_number_text"
                  android:singleLine="true"
                  android:numeric="integer"
                  android:hint="@string/number_hint"
        />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/value_label" />
        <EditText android:id="@+id/details_value_text"
                  android:singleLine="true"
                  android:numeric="decimal"
                  android:hint="@string/value_hint"
        />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/count_label" />
        <EditText android:id="@+id/details_count_text"
                  android:singleLine="true"
                  android:numeric="integer"
                  android:hint="@string/count_hint"
        />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/player_name_label" />
        <EditText android:id="@+id/details_player_name_text"
                  android:singleLine="true"
                  android:capitalize="words"
                  android:hint="@string/player_name_hint"
        />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/player_position_label" />
        <Spinner android:id="@+id/details_player_position_text"
                 android:singleLine="true"
                 android:hint="@string/player_position_hint"
        />
    </TableRow>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
    >
        <Button android:id="@+id/details_save_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save_button"
        />
        <Button android:id="@+id/details_done_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/done_button"
        />
    </LinearLayout>
</TableLayout>
