<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of BBCT for Android.

 Copyright 2012 codeguru <codeguru@users.sourceforge.net>

 BBCT for Android is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 BBCT for Android is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:stretchColumns="1"
>
    <TableRow>
        <TextView android:text="@string/player_name_label" />
        <EditText android:id="@+id/player_name_filter_player_name_text"
                  android:singleLine="true"
                  android:capitalize="words"
                  android:hint="@string/player_name_hint"
        />
    </TableRow>
    <Button android:id="@+id/player_name_filter_ok_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok_button"
    />
</TableLayout>
